Crash turning on captions on iOS version (worked previously)
-
download MPEG 2 file to VLC
-
start playback
-
try to turn on closed captions (I always use Captions 1)
-> Within a few seconds later, it crashes. (Captions have never shown up.)
(The app says version 2.1, based on 2.1.0-rc1 Riewind)
This did NOT happen on the previous version, I was using captions successfully there
Activity
-
Newest first Oldest first
-
Show all activity Show comments only Show history only
- Maintainer
We are using a different subtitles renderer in this release, which supports all international characters but slightly less advanced.
I need a sample file to fix this problem. Please upload a clip to http://streams.videolan.org/upload
Thanks!
- Jean-Baptiste Kempf changed milestone to %iOS 2.2
changed milestone to %iOS 2.2
- Maintainer
frame [#1](https://code.videolan.org/videolan/vlc/-/issues/1): 0x00007fff99dece9d CoreFoundation`CFStringCreateWithCString + 29 frame [#2](https://code.videolan.org/videolan/vlc/-/issues/2): 0x000000010d79dc8c libquartztext_plugin.dylib`setFontAttibutes(psz_fontname=0x0000000000000000, i_font_size=26, i_font_color=4294967295, b_bold=false, b_italic=false, b_underline=false, p_range=CFRange at 0x000000010d97e2a0, p_attrString=0x00000001030aba20) + 156 at quartztext.c:538 frame [#3](https://code.videolan.org/videolan/vlc/-/issues/3): 0x000000010d79dae3 libquartztext_plugin.dylib`GetAttrStrFromFontStack(p_fonts=0x000000010d97e468, b_bold=false, b_italic=false, b_uline=false, p_range=CFRange at 0x000000010d97e2d8, p_attrString=0x00000001030aba20) + 211 at quartztext.c:620 frame [#4](https://code.videolan.org/videolan/vlc/-/issues/4): 0x000000010d79c55e libquartztext_plugin.dylib`ProcessNodes(p_filter=0x0000000104014cb0, p_xml_reader=0x000000010789ab90, p_font_style=0x0000000107890c40, p_attrString=0x0000000107893a80) + 2494 at quartztext.c:733 frame [#5](https://code.videolan.org/videolan/vlc/-/issues/5): 0x000000010d79ba58 libquartztext_plugin.dylib`RenderHtml(p_filter=0x0000000104014cb0, p_region_out=0x0000000107895f90, p_region_in=0x0000000107895f90, p_chroma_list=0x000000010d98ccd0) + 648 at quartztext.c:812 frame [#6](https://code.videolan.org/videolan/vlc/-/issues/6): 0x00000001000c7e2e libvlccore.7.dylib`SpuRenderText(spu=0x0000000103a014b0, rerender_text=0x000000010d97ec9f, region=0x0000000107895f90, chroma_list=0x000000010d98ccd0, elapsed_time=0) + 222 at vout_subpictures.c:291 frame [#7](https://code.videolan.org/videolan/vlc/-/issues/7): 0x00000001000c679d libvlccore.7.dylib`SpuRenderRegion(spu=0x0000000103a014b0, dst_ptr=0x0000000107895ac8, dst_area=0x000000010d97eea8, subpic=0x0000000105ba3e80, region=0x0000000107895f90, scale_size=spu_scale_t at 0x000000010d97ed38, chroma_list=0x000000010d98ccd0, fmt=0x000000010d97fd50, subtitle_area=0x000000010d97eee0, subtitle_area_count=0, render_date=1380456396750761) + 397 at vout_subpictures.c:692 frame [#8](https://code.videolan.org/videolan/vlc/-/issues/8): 0x00000001000c60d9 libvlccore.7.dylib`SpuRenderSubpictures(spu=0x0000000103a014b0, i_subpicture=1, pp_subpicture=0x000000010d97f950, chroma_list=0x000000010d98ccd0, fmt_dst=0x000000010d97fd50, fmt_src=0x0000000105bbb8a8, render_subtitle_date=1380456396750761, render_osd_date=1380456396745205) + 1737 at vout_subpictures.c:1068 frame [#9](https://code.videolan.org/videolan/vlc/-/issues/9): 0x00000001000c503b libvlccore.7.dylib`spu_Render(spu=0x0000000103a014b0, chroma_list=0x000000010d98ccd0, fmt_dst=0x000000010d97fd50, fmt_src=0x0000000105bbb8a8, render_subtitle_date=1380456396750761, render_osd_date=1380456396745205, ignore_osd=false) + 827 at vout_subpictures.c:1490 frame [#10](https://code.videolan.org/videolan/vlc/-/issues/10): 0x00000001000bf893 libvlccore.7.dylib`ThreadDisplayRenderPicture(vout=0x0000000103a00eb0, is_forced=false) + 1635 at video_output.c:959 frame [#11](https://code.videolan.org/videolan/vlc/-/issues/11): 0x00000001000bee09 libvlccore.7.dylib`ThreadDisplayPicture(vout=0x0000000103a00eb0, now=false, deadline=0x000000010d97fee8) + 1065 at video_output.c:1125 frame [#12](https://code.videolan.org/videolan/vlc/-/issues/12): 0x00000001000be96b libvlccore.7.dylib`ThreadManage(vout=0x0000000103a00eb0, deadline=0x000000010d97fee8, interlacing=0x000000010d97fef0) + 75 at video_output.c:1136 frame [#13](https://code.videolan.org/videolan/vlc/-/issues/13): 0x00000001000bd134 libvlccore.7.dylib`Thread(object=0x0000000103a00eb0) + 836 at video_output.c:1569 frame [#14](https://code.videolan.org/videolan/vlc/-/issues/14): 0x00007fff9a83a772 libsystem_c.dylib`_pthread_start + 327 frame [#15](https://code.videolan.org/videolan/vlc/-/issues/15): 0x00007fff9a8271a1 libsystem_c.dylib`thread_start + 13
- Maintainer
commit 13e35edc Author: Felix Paul Kühne fkuehne@videolan.org Date: Sun Sep 29 14:14:23 2013 +0200
quartztext: add basic font-fallback mechanism instead of crashing (close [#9369](https://code.videolan.org/videolan/vlc/-/issues/9369))
- Felix Paul Kühne added Status::fixed label
added Status::fixed label
- Felix Paul Kühne closed
closed
- Felix Paul Kühne changed milestone to %iOS 2.1.2
changed milestone to %iOS 2.1.2
Verified on 2.1.2!
Though now I can't view at e.g. 2x WITH captions.. I get basically a slideshow for video. I'll write up a separate bug for that sometime soon. With the first version for iOS that I used (2.0?), I was able to do 2x with captions, and it played at 2x with the captions shown too.