quartztext: add basic font-fallback mechanism instead of crashing (close #9369)